--- a/quienessomos.html
+++ b/quienessomos.html
@@ -21,16 +21,16 @@
 
         .slideshow-container {
             position: relative;
-            width: 100%; /* Ajusta el ancho del contenedor de la imagen */
-            max-width: 1200px; /* Máximo ancho del contenedor */
-            height: 60vh; /* Altura relativa para adaptarse a pantallas más pequeñas */
+            width: 100%;
+            max-width: 1200px;
+            height: 60vh;
             overflow: hidden;
         }
 
         .slideshow-container img {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Asegura que las imágenes cubran el contenedor manteniendo proporciones */
+            object-fit: cover;
             border-radius: 15px;
             position: absolute;
             top: 0;
@@ -86,7 +86,11 @@
         /* Media Queries para pantallas más pequeñas */
         @media (max-width: 768px) {
             .slideshow-container {
-                height: 50vh; /* Reduce la altura en pantallas más pequeñas */
+                height: 50vh;
+            }
+
+            .slideshow-container img {
+                object-fit: contain; /* Asegura que las imágenes se muestren completas */
             }
 
             .button {
@@ -99,7 +103,11 @@
 
         @media (max-width: 480px) {
             .slideshow-container {
-                height: 40vh; /* Aún más pequeña en dispositivos móviles */
+                height: 40vh;
+            }
+
+            .slideshow-container img {
+                object-fit: contain; /* Para dispositivos móviles, asegura que las imágenes no se recorten */
             }
 
             .button {
@@ -112,7 +120,7 @@
 
         @media (max-height: 600px) {
             .slideshow-container {
-                height: 50vh; /* Ajusta la altura para pantallas con poca altura */
+                height: 50vh;
             }
 
             .button {
@@ -145,7 +153,6 @@
         let dots = document.querySelectorAll('.dot');
         let autoSlideInterval;
 
-        // Mostrar la diapositiva actual basada en el índice
         function showSlides(index) {
             slides.forEach((slide, idx) => {
                 slide.style.opacity = "0";
