--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-image: url('red medica-10.jpg');
+            background-image: url(ASESORES.jpg);
             background-size: cover; /* Asegura que la imagen de fondo cubra todo el viewport */
             background-position: center; /* Centra la imagen de fondo */
             background-repeat: no-repeat; /* Evita que la imagen se repita */
