--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
             padding: 0;
             height: 100vh;
             background-image: url(ASESORES.jpg);
-            background-size: cover; /* Asegura que la imagen de fondo cubra todo el viewport */
-            background-position: center; /* Centra la imagen de fondo */
-            background-repeat: no-repeat; /* Evita que la imagen se repita */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
@@ -40,7 +40,6 @@
             transform: scale(1.5);
         }
 
-        /* Estilos para los enlaces de redes sociales */
         .social-links {
             display: flex;
             justify-content: center;
@@ -67,27 +66,18 @@
             transform: scale(1.3);
         }
 
-        /* Estilos para el h1 en dispositivos móviles */
-        @media (max-width: 480px) {
-            h1 {
-                display: block;
-                font-size: 28px;
-                color: #fff;
-                text-align: center;
-                margin-bottom: 20px;
-                background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
-                padding: 10px 20px;
-                border-radius: 10px;
-                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Sombra de texto */
-                font-family: 'Courier New', Courier, monospace;
-                letter-spacing: 1.5px;
-                transition: transform 0.3s ease, background-color 0.3s ease;
+        /* Estilos específicos para dispositivos móviles */
+        @media (max-width: 768px) {
+            body {
+                background-color: white; /* Fondo blanco */
+                background-image: none; /* Quita la imagen de fondo */
+                justify-content: flex-start; /* Mueve el contenido hacia arriba */
             }
 
-            h1:hover {
-                background-color: rgba(11, 232, 240, 0.808);
-                color: #333;
-                transform: scale(1.0);
+            .logo {
+                width: 150px; /* Tamaño del logo */
+                margin-top: 20px;
+                margin-bottom: 20px;
             }
 
             .social-links img {
@@ -106,20 +96,19 @@
             }
         }
 
-        /* Ocultar el H1 en dispositivos más grandes */
-        @media (min-width: 481px) {
-            h1 {
-                display: none;
+        @media (min-width: 769px) {
+            .logo {
+                display: none; /* Oculta el logo en pantallas más grandes */
             }
         }
     </style>
 </head>
 <body>
 
-    <!-- Título que solo aparecerá en móviles -->
-    <h1>Síguenos en nuestras redes</h1>
+    <!-- Logo que solo aparecerá en móviles -->
+    <img src="LOGO_01.png" alt="Logo" class="logo">
 
-    <!-- Enlaces de redes sociales con imágenes -->
+    <!-- Enlaces de redes sociales -->
     <div class="social-links">
         <a href="https://wa.me/5624600578" target="_blank">
             <img src="WhatsApp-logo (1).png" alt="WhatsApp"> 
