--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,14 @@
             .logo {
                 width: 150px; /* Tamaño del logo */
                 margin-top: 20px;
+                margin-bottom: 10px;
+            }
+
+            h1 {
+                font-size: 24px;
+                color: #333;
                 margin-bottom: 20px;
+                text-align: center;
             }
 
             .social-links img {
@@ -97,8 +104,9 @@
         }
 
         @media (min-width: 769px) {
-            .logo {
-                display: none; /* Oculta el logo en pantallas más grandes */
+            .logo,
+            h1 {
+                display: none; /* Oculta el logo y el h1 en pantallas más grandes */
             }
         }
     </style>
@@ -106,7 +114,10 @@
 <body>
 
     <!-- Logo que solo aparecerá en móviles -->
-    <img src="LOGO_01.png" alt="Logo" class="logo">
+    <img src="logo.png" alt="Logo" class="logo">
+
+    <!-- Título que solo aparecerá en móviles -->
+    <h1>Síguenos en nuestras redes</h1>
 
     <!-- Enlaces de redes sociales -->
     <div class="social-links">
@@ -125,3 +136,4 @@
 
 </body>
 </html>
+
