--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </head>
 <body>
     <!-- Logo que se mostrará solo en móviles -->
-    <img src="logo.png" alt="Logo GMEDIC" class="logo">
+    <img src="LOGO_01.png" alt="Logo GMEDIC" class="logo">
 
     <div class="background" id="background"></div>
     <div class="container">
