--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
 <body>
 
     <!-- Logo que solo aparecerá en móviles -->
-    <img src="logo.png" alt="Logo" class="logo">
+    <img src="LOGO_01.png" alt="Logo" class="logo">
 
     <!-- Título que solo aparecerá en móviles -->
     <h1>Síguenos en nuestras redes</h1>
