--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
 
         .social-links a {
@@ -57,13 +57,13 @@
         }
 
         .social-links img {
-            width: 80px;
-            height: 80px;
+            width: auto; /* Cambiado a solo ancho */
+            height: 100px; /* Altura automática para mantener la proporción */
             border-radius: 15px;
         }
 
         .social-links a:hover {
-            transform: scale(1.3);
+            transform: scale(1.5);
         }
 
         /* Estilos específicos para dispositivos móviles */
@@ -77,19 +77,12 @@
             .logo {
                 width: 150px; /* Tamaño del logo */
                 margin-top: 20px;
-                margin-bottom: 10px;
-            }
-
-            h1 {
-                font-size: 24px;
-                color: #333;
                 margin-bottom: 20px;
-                text-align: center;
             }
 
             .social-links img {
-                width: 50px;
-                height: 50px;
+                width: 80px; /* Ancho para dispositivos móviles */
+                height: auto; /* Altura automática para mantener la proporción */
             }
 
             .button {
@@ -104,9 +97,8 @@
         }
 
         @media (min-width: 769px) {
-            .logo,
-            h1 {
-                display: none; /* Oculta el logo y el h1 en pantallas más grandes */
+            .logo {
+                display: none; /* Oculta el logo en pantallas más grandes */
             }
         }
     </style>
@@ -115,9 +107,6 @@
 
     <!-- Logo que solo aparecerá en móviles -->
     <img src="LOGO_01.png" alt="Logo" class="logo">
-
-    <!-- Título que solo aparecerá en móviles -->
-    <h1>Síguenos en nuestras redes</h1>
 
     <!-- Enlaces de redes sociales -->
     <div class="social-links">
