--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-image: url(ASESORES.jpg);
+            background-image: url(red medica-10.jpg);
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
